<resources>
    <string name="app_name">HelpMeApp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="help">HELP ME</string>
    <string name="start">GET STARTED</string>
    <string name="intro">INTRODUCTION</string>
    <string name="about">ABOUT</string>
    <string name="what">WELCOME TO HELP ME!\n\nThis is a great way of learning and strengthening your Mathematical abilities. This app has math cheats, slides with valuable information(From the Answer Series Textbook) and a scientific calculator to assist in any of your difficulties. If you are still confused about anything, click on "More Information"\tand it will direct you to a website where you can search for any maths solution.\n\nHave fun!!!</string>
    <string name="continue_button">CONTINUE</string>
    <string name="title_activity_taking_picture">TakingPicture</string>

    <string name="moreInfo">MORE INFORMATION...</string>
    <string name="grade10">GRADE 10</string>
    <string name="grade11">GRADE 11</string>
    <string name="grade12">GRADE 12</string>

    <string name="grade10Heading">GRADE 10</string>
    <string name="trigFunctions">TRIGONOMETRY FUNCTIONS</string>
    <string name="trigInvestigation">TRIGONOMETRY INVESTIGATION</string>
    <string name="euclidean">EUCLIDEAN GEOMETRY</string>
    <string name="quadrilaterals">QUADRALATERALS</string>
    <string name="exemplarPaperMemos">EXEMPLAR PAPERS 1-2 MEMOS</string>
    <string name="exemplarPaperQuestions">EXEMPLAR PAPERS 1-2 QUESTIONS</string>

    <string name="grade11Heading">GRADE 11</string>
    <string name="functionsGraphs">FUNCTIONS: GRAPHS</string>
    <string name="functionsSummary">FUNCTIONS: SUMMARY</string>
    <string name="functionsDomain">FUNCTONS: DOMAIN,RANGE</string>
    <string name="analyticalGeometry">ANALYTICAL GEOMETRY</string>
    <string name="measurementFormulae">MEASUREMENT FORMULAE</string>

    <string name="grade12Heading">GRADE 12</string>
    <string name="functions">FUNCTIONS</string>
    <string name="calculus">CALCULUS</string>
    <string name="notes">ALGEBRA, EXPONENTS &amp; SURDS</string>
    <string name="analyticGeometry">ANALYTICAL GEOMETRY THEORY 2</string>
    <string name="nationalExam2014">NATIONAL NOVEMBER EXAM 2014: \n\t\t\t\t QUESTIONS and ANSWERS</string>
    <string name="nationalExam2015">NATIONAL NOVEMBER EXAM 2015: \n\t\t\t\t QUESTIONS and ANSWERS</string>

    <string name="no_text"> </string>
    <string name="rcl">RCL</string>
    <string name="sto">STO</string>
    <string name="m_minus">M-</string>
    <string name="shift">SHIFT</string>
    <string name="rad">RAD</string>
    <string name="abs">ABS</string>
    <string name="mr">MR</string>
    <string name="ms">MS</string>
    <string name="m_plus">M+</string>
    <string name="inverse_sin">sin1</string>
    <string name="inverse_cos">cos1</string>
    <string name="inverse_tan">tan1</string>
    <string name="expo">ex</string>
    <string name="ten_power">10x</string>
    <string name="rnd">rnd</string>
    <string name="sin_sign">sin</string>
    <string name="cos_sign">cos</string>
    <string name="tan_sign">tan</string>
    <string name="natural_log">ln</string>
    <string name="log">log</string>
    <string name="cube_root">3?</string>
    <string name="cube">x3</string>
    <string name="one_over_x">1/x</string>
    <string name="x_power_y">Yx</string>
    <string name="square_root">/</string>
    <string name="x_square">x^2</string>
    <string name="percent">%</string>
    <string name="open_bracket">(</string>
    <string name="close_bracket">)</string>
    <string name="seven_button">7</string>
    <string name="eight_button">8</string>
    <string name="nine_button">9</string>
    <string name="clear">AC</string>
    <string name="factorial">n!</string>
    <string name="combination">c(n,r)</string>
    <string name="permutation">p(n,r)</string>
    <string name="rate">Rate</string>
    <string name="four_button">4</string>
    <string name="five_button">5</string>
    <string name="six_button">6</string>
    <string name="multiplication">x</string>
    <string name="division">/</string>
    <string name="pi">ii</string>
    <string name="e">e</string>
    <string name="comma">,</string>
    <string name="one_button">1</string>
    <string name="two_button">2</string>
    <string name="three_button">3</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="zero_button">0</string>
    <string name="dot">.</string>
    <string name="exp">exp</string>
    <string name="ans">Ans</string>
    <string name="equal_sign">=</string>
    <string name="x_value">x</string>
    <string name="plus_minus">+/-</string>
    <string name="plot">Plot</string>
    <string name="asterisk">*</string>
    <string name="pref_previously_started">first_start</string>

</resources>
