<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" android:id="@+id/ScrollView">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/grid">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/grade12Heading"
            android:id="@+id/grade12Heading"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/green"
            android:background="@android:color/white"
            android:fontFamily="sans-serif-smallcaps"
            android:layout_above="@+id/functions"
            android:layout_centerHorizontal="true" />


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/help"
        android:textSize="30dp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/HelpMe"
        android:textStyle="bold"
        android:background="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



        <ImageView
            android:layout_width="80dp"
            android:layout_height="150dp"
            android:id="@+id/imageView"
            android:src="@drawable/eyes"
            android:layout_weight="0.55"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/functions"
            android:textStyle="bold"
            android:onClick="onClick"
            android:textSize="16sp"
            android:clickable="true"
            android:id="@+id/functions"
            android:layout_marginTop="41dp"
            android:background="@android:color/white"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:onClick="onClick"
            android:clickable="true"
            android:textSize="16sp"
            android:text="@string/calculus"
            android:id="@+id/calculus"
            android:background="@android:color/white"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/functions"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textStyle="bold"
            android:clickable="true"
            android:textSize="16sp"
            android:onClick="onClick"
            android:id="@+id/notes"
            android:layout_marginTop="27dp"
            android:background="@android:color/white"
            android:layout_below="@+id/calculus"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/analyticalGeometry"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="16sp"
            android:id="@+id/analyticalGeometry"
            android:layout_marginTop="42dp"
            android:background="@android:color/white"
            android:textAlignment="center"
            android:layout_below="@+id/notes"
            android:layout_alignStart="@+id/imageView"
            android:layout_alignEnd="@+id/notes"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:clickable="true"
            android:onClick="onClick"
            android:textSize="16sp"
            android:text="@string/nationalExam2014"
            android:id="@+id/nationalExam2014"
            android:background="@android:color/white"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/analyticalGeometry"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nationalExam2015"
            android:id="@+id/nationalExam2015"
            android:textStyle="bold"
            android:textSize="16sp"
            android:onClick="onClick"
            android:clickable="true"
            android:background="@android:color/white"
            android:layout_marginTop="36dp"
            android:layout_below="@+id/nationalExam2014"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
</ScrollView>