<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grid">




    <Button
        android:textColor="@android:color/white"
        android:layout_width="250sp"
        android:layout_height="40sp"
        android:text="@string/grade11"
        android:id="@+id/grade11"
        android:background="@color/green"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/grade10"
        android:fontFamily="sans-serif-smallcaps"/>

    <Button
        android:textColor="@android:color/white"
        android:layout_width="250sp"
        android:layout_height="40sp"
        android:text="@string/grade12"
        android:id="@+id/grade12"
        android:background="@color/green"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_below="@+id/grade11"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:textColor="@android:color/white"
        android:layout_width="250sp"
        android:layout_height="40sp"
        android:text="@string/grade10"
        android:id="@+id/grade10"
        android:textStyle="bold"
        android:background="@color/green"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_above="@+id/grade11"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calcultor"
        android:clickable="true"
        android:onClick="clickImage"
        android:src="@drawable/calc"
        android:layout_alignTop="@+id/moreInfo"
        android:layout_alignEnd="@+id/grade12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/help"
        android:textSize="38dp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/textView4"
        android:textStyle="bold"
        android:background="@android:color/white"
        android:layout_above="@+id/imageView2"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:src="@drawable/eyes"
        android:layout_weight="0.55"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:layout_marginBottom="30dp"
        android:layout_above="@+id/grade10"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moreInfo"
        android:textColor="@color/colorPrimary"
        android:onClick="true"
        android:textStyle="bold"
        android:id="@+id/moreInfo"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/grade12"
        android:layout_alignStart="@+id/grade12" />

</RelativeLayout>
