<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/c"
    android:background="@android:color/transparent">

    <ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background_im"
    android:src="@drawable/grid"
    android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/intro"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-smallcaps"
        android:id="@+id/intro"
        android:layout_marginTop="33dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/about"
        android:textSize="17dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@android:color/black"
        android:id="@+id/About"
        android:textStyle="bold"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/About"
        android:layout_centerHorizontal="true">

    </ScrollView>

    <Button
        android:layout_width="155dp"
        android:layout_height="40dp"
        android:text="@string/continue_button"
        android:fontFamily="sans-serif-smallcaps"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="@color/green"
        android:id="@+id/continue_button"
        android:layout_marginBottom="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what"
        android:id="@+id/text"
        android:textStyle="bold"
        android:textSize="13dp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/About"
        android:layout_above="@+id/continue_button"
        android:layout_alignParentEnd="true" />


</RelativeLayout>